# OCR-Server

./: README.md  db.sqlite3  pyproject.toml
ProjectApp/: manage.py
ProjectApp/ProjectApp/: asgi.py  settings.py  urls.py  wsgi.py
boards/: admin.py  models.py  views.py
config/: settings.py  urls.py
ocr/: apps.py  urls.py  views.py
static/admin/css/: changelists.css  forms.css  rtl.css
static/admin/js/: SelectBox.js  SelectFilter2.js  actions.js  autocomplete.js  calendar.js  core.js  filters.js  inlines.js  prepopulate_init.js
static/admin/js/admin/: DateTimeShortcuts.js  RelatedObjectLookups.js
static/admin/style/: grid.css
static/script/: log-api.js  user-api.js
static/style/: form.css
templates/: board_form.html  board_list.html  footer.html
users/: models.py  views.py
users/migrations/: 0001_initial.py  0002_user_name_alter_user_first_name_alter_user_last_name.py
